fix(sybase): fixed remove first connection on getconnection